# AUTOCAD

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/: __init__.py  context.py  execution_log.py  execution_queue.py
apps/api/: __init__.py  main.py
apps/dashboard/: __init__.py
apps/dashboard/static/: app.js  index.html  styles.css
apps/server/: __init__.py  server.py  tools.py
autocad/: __init__.py  backend.py
cad/: __init__.py  backend.py  registry.py
docs/: LOCAL_AUTOCAD_TESTING.md  architecture-review.md  architecture.md
dxf/: __init__.py  backend.py
engine/: __init__.py
engine/geometry/: __init__.py  engine.py  primitives.py
engine/planner/: __init__.py  intent.py  planner.py
engine/validator/: __init__.py  engine.py  issue.py  rules.py
examples/plugins/: example_plugin.py
export/: __init__.py  renderer.py  script.py
imports/: __init__.py  svg_import.py
nlp/: __init__.py  fallback.py
plugins/: __init__.py  base.py  loader.py
storage/: __init__.py  models.py  store.py
symbols/: __init__.py  library.py
templates/: __init__.py  library.py
tests/: test_api.py  test_dxf_backend.py  test_execution_log.py  test_execution_queue.py  test_export.py  test_geometry_engine.py  test_nlp_fallback.py  test_planner.py  test_plugins.py  test_primitives.py  test_script_export.py  test_storage.py  test_svg_import.py  test_symbols.py  test_templates.py  test_tools.py  test_validation.py
