[project]
name = "cad-mcp-platform"
version = "0.2.0"
description = "AI CAD engineering platform: plan -> validate -> execute drawing operations, exposed over MCP."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "mcp>=1.0.0",
    "ezdxf>=1.3",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "Pillow>=10.0",
]

[project.optional-dependencies]
autocad = ["pywin32>=228; platform_system == 'Windows'"]
render-png = ["matplotlib>=3.7"]
dev = ["pytest>=7.4", "ruff>=0.4", "httpx>=0.27", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
include = ["apps*", "engine*", "cad*", "dxf*", "autocad*", "nlp*", "storage*", "export*", "plugins*", "symbols*", "imports*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
